--- a/src/Assignment-1/assignment1.html
+++ b/src/Assignment-1/assignment1.html
@@ -13,7 +13,27 @@
 
 	<!-- This is just a comment. Ignore this line.-->
 	<!-- Start your code from here -->
-	
+	<div class="left">
+     <ul>
+	 <li>list item 1</li>
+	 <li>list item 2</li>	
+	 <li>list item 3
+		 <ul>
+			 <li>list item 3.1</li>
+			 <li>list item 3.2</li>
+		 </ul>
+	 </li>		 
+	 </ul>  
+	</div>
+	<div class="right">
+	<img src="" alt="italian">	
+	</div>
+	<div class="left">
+		<img src="" alt="italian">	
+	</div>
+	<div class="right">
+	<h1>The largest community of photo enthusiasts </h1>	
+	</div>
 	
 	<!-- End your code -->
 
