I have completed my assignment_3

--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -9,10 +9,29 @@
 </head>
 
 <body>
-	<div id="container">
-
+      <div id="container">
+   
 	<!-- Start your code from here -->
-	
+	<div class="container1">
+     <div class="Toppart left">
+     <h1 class="head">Your Best Value Proposition</h1>
+	 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, cupiditate labore dicta omnis id hic aut. Tempora laborum eum quaerat atque tempore assumenda soluta eveniet deleniti laudantium a nihil hic itaque nulla, repellendus reprehenderit.</p>
+	 <button type="button" >Start free trail</button>
+	 </div>
+	 <div class="Toppart right">
+		<iframe src="https://www.wikipedia.org" id="render-wiki" frameBorder="0"></iframe> 
+	</div>
+	</div>
+	<div class="container2">
+		    <div class="top">
+			<h1 class="head1">Your Best Value Proposition</h1>
+			<p class="para" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, cupiditate labore dicta omnis id hic aut. Tempora laborum eum quaerat atque tempore assumenda soluta eveniet deleniti laudantium a nihil hic itaque nulla, repellendus reprehenderit.</p>
+			<button type="button"  class="button_2">Start free trail</button>
+			</div>
+			<div class="down">
+				<iframe src="https://www.dictionary.com" id="render-dictionary" frameBorder="0"></iframe> 
+			</div>		
+	</div>
 	<!-- End your code -->
 
 	</div>
