I have completed Html_Css Assignment5

--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,7 +12,29 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	
+	<div class="Main-container">
+		<section class="Sub-container">
+		 <div class="left">
+		  <img src="Images/plant-1.png" alt="Plant-Image" class="Image-1">
+		 </div>
+		 <div class="right">
+		   <h1>A Leafy one</h1>
+		   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt voluptas repudiandae blanditiis, ipsa ducimus ex, voluptates sint, suscipit vel beatae iure dolorem hic minus labore ratione provident. Quos, repellat eligendi.</p>
+		   <button type="button">SO LEAFY</button>
+		</div>
+		</section>
+		<section class="Sub-container">
+		  <div class="left">
+			<img src="Images/plant-4.png" alt="Plant-Image" class="Image-2">
+		  </div>
+		  <div class="right">
+			<h1>Some pointy ones</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, earum cumque. Fuga quia provident recusandae asperiores eveniet ipsam quaerat ipsa.</p>
+			<button type="button">I'II TAKE 10</button> 
+		 </div>
+		</section>
+	</div>
+
 
 	<!-- End your code -->
 
